# SwarmMusic2

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  c-cpp.yml  cppcheck_report.txt  makefile  prettyAgent.json  prettyAttractor10.json  prettyAttractor25.json  prettyAttractorsSeparateNormals.json  stk.sh  traceDump
.github/workflows/: c-cpp.yml
data/: componentsData.json  meshData.json  meshDataBackup.json
ext/: Shader.h
include/: Agent.h  Attractor.h  Consts.h  Scale.h  Swarm.h  Triplet.h  Utils.h  World.h
include/Components/: Draw.h  Move.h  Transform.h
include/Managers/: Component.h  Entity.h  Properties.h  System.h  Window.h
include/Systems/: Move.h  Render.h  Swarm.h  UI.h
lib/: Shader.h  nuklear_glfw_gl3.h
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
shaders/: light.fs  light.vs  solid.fs  solid.vs  test.vs  test2.fs
src/: Agent.cpp  Attractor.cpp  Consts.cpp  Scale.cpp  Swarm.cpp  Triplet.cpp  Utils.cpp  main.cpp  mainCopy.cpp
src/Managers/: Component.cpp  Entity.cpp  Properties.cpp  System.cpp  Window.cpp
src/Systems/: Move.cpp  Render.cpp  Swarm.cpp  UI.cpp
